// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createSignedAddProviderPayload > returns the correct payload 1`] = `
{
  "endpoint": {
    "extrinsic": "createSponsoredAccountWithDelegation",
    "pallet": "msa",
  },
  "payload": {
    "authorizedMsaId": "1",
    "expiration": 100,
    "schemaIds": [
      8,
      9,
      10,
      15,
    ],
  },
  "signature": {
    "algo": "SECP256K1",
    "encodedValue": "0x891f07a77f1e52d0610ef518084a4cb29669ea9bfd3b28641ba75d29581f72191f7f1a55aeae7d79be7dd29ed05292574687cb1902aa617bf09609e7eb6ccb8d1c",
    "encoding": "base16",
  },
  "type": "addProvider",
}
`;

exports[`createSignedClaimHandlePayload > returns the correct payload 1`] = `
{
  "endpoint": {
    "extrinsic": "claimHandle",
    "pallet": "handles",
  },
  "payload": {
    "baseHandle": "Alice",
    "expiration": 100,
  },
  "signature": {
    "algo": "SECP256K1",
    "encodedValue": "0x832d1f6870118f5fc6e3cc314152b87dc452bd607581f16b1e39142b553260f8397e80c9f7733aecf1bd46d4e84ad333c648e387b069fa93b4b1ca4fa0fd406b1c",
    "encoding": "base16",
  },
  "type": "claimHandle",
}
`;

exports[`createSignedGraphKeyPayload > returns the correct payload 1`] = `
{
  "endpoint": {
    "extrinsic": "applyItemActionsWithSignatureV2",
    "pallet": "statefulStorage",
  },
  "payload": {
    "actions": [
      {
        "payloadHex": "0x40a6836ea489047852d3f0297f8fe8ad6779793af4e9c6274c230c207b9b825026",
        "type": "addItem",
      },
    ],
    "expiration": 100,
    "schemaId": 7,
    "targetHash": 0,
  },
  "signature": {
    "algo": "SECP256K1",
    "encodedValue": "0x66f362d1b72de80760fc90f2ca4516a1286c081313f4017027af5cce9391902d239a8f1464f56761568e9556f8d9a5bb3eb264e04268eb7617915592d6eeed431c",
    "encoding": "base16",
  },
  "type": "itemActions",
}
`;

exports[`createSignedLogInPayload > returns the correct payload 1`] = `
{
  "credentials": [],
  "payloads": [
    {
      "payload": {
        "message": "your-app.com wants you to sign in with your Frequency account:
    frequency:123:0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac
    
    URI: https://your-app.com/signin/callback
    Version: 1
    Nonce: N6rLwqyz34oUxJEXJ
    Chain ID: frequency:123
    Issued At: 2024-10-29T19:17:27.077Z
  ",
      },
      "signature": {
        "algo": "SECP256K1",
        "encodedValue": "0x46b11fb2ecb500fa20fcf754a981bce71ea090270bee3ebbd9de43ca030b73660629cd3a70bcda1457b100415fcd7ea9c4d221d241ea376eebf975eb0ad2e4f71b",
        "encoding": "base16",
      },
      "type": "login",
    },
  ],
  "userPublicKey": {
    "encodedValue": "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
    "encoding": "base16",
    "format": "eip-55",
    "type": "Secp256k1",
  },
}
`;
